--- a/key_secure_v2/web/index.html
+++ b/key_secure_v2/web/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <!--
     If you are serving your web app in a path other than the root, change the
@@ -15,17 +16,21 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description"
+    content="A password management application(Password Manager).Manage all your passwords at one place and in multiple platforms.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="key_secure_v2">
+  <meta name="apple-mobile-web-app-title" content="Key Secure">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>key_secure_v2</title>
+  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+
+  <title>Key Secure</title>
   <link rel="manifest" href="manifest.json">
 </head>
+
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
@@ -95,4 +100,5 @@
     }
   </script>
 </body>
+
 </html>
